--- a/cardapio.css
+++ b/cardapio.css
@@ -173,3 +173,35 @@ body {
     width: 100%;
 }
 
+.basehamburguer {
+    width: 1000px;
+    height: 300px;
+    background: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 70px;
+}
+.australian {
+    height: 300px;
+    width: 400px;
+    border-radius: 15px;
+}
+.basehamburguer h1 {
+    color: rgb(0, 255, 51);
+    position: absolute;
+    right: 450px;
+    top: 400px;
+    font-size: 36px;
+    font-family: 'Caveat', cursive;
+}
+.basehamburguer li {
+    text-decoration: none;
+    list-style: none;
+    color: #5500ff;
+    position: absolute;
+    top: 470px;
+    width: 400px;
+    right: 360px;
+    font-family: 'Caveat', cursive;
+    font-size: 20px;
+}
