--- a/cardapio.css
+++ b/cardapio.css
@@ -176,7 +176,7 @@ body {
 .basehamburguer {
     width: 1000px;
     height: 300px;
-    background: #ffffff;
+    background: #000000;
     margin-left: auto;
     margin-right: auto;
     margin-top: 70px;
@@ -187,7 +187,7 @@ body {
     border-radius: 15px;
 }
 .basehamburguer h1 {
-    color: rgb(0, 255, 51);
+    color: rgb(255, 255, 255);
     position: absolute;
     right: 450px;
     top: 400px;
@@ -197,7 +197,7 @@ body {
 .basehamburguer li {
     text-decoration: none;
     list-style: none;
-    color: #5500ff;
+    color: #ffffff;
     position: absolute;
     top: 470px;
     width: 400px;
