--- a/cardapio.css
+++ b/cardapio.css
@@ -1013,3 +1013,31 @@ body {
     font-family: 'Caveat', cursive;
     font-size: 20px;
 }
+
+/* ksalkslakslakslak */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: #ff8c00;
+    color: white;
+    padding: 20px;
+  }
+
+  .column {
+    flex: 1;
+    padding: 0 20px;
+  }
+
+  .column h3 {
+    margin-bottom: 10px;
+  }
+
+  .column ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .column ul li {
+    margin-bottom: 5px;
+  }
